added almost full auth example on frontend side

--- a/js/src/main/resources/front-res/css/style.css
+++ b/js/src/main/resources/front-res/css/style.css
@@ -46,3 +46,10 @@ main > .container {
 .max-vh-50 {
   max-height: 50vh;
 }
+
+.input-group>.input-group-prepend {
+  flex: 0 0 15%;
+}
+.input-group .input-group-text {
+  width: 100%;
+}
